<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_alignParentTop="true"
        android:id="@+id/arrowIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="-30dp"
        android:layout_marginTop="-20dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_baseline_arrow_drop_up_24"/>

    <LinearLayout
        android:layout_below="@+id/arrowIcon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_pop_window_bg"
        android:orientation="vertical">
        <TextView
            android:id="@+id/downloadConfigForPopTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="0dp"
            android:gravity="center"
            android:text="@string/pop_download_config_file"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/downLoadRaceListOnMainTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="0dp"
            android:background="@drawable/selector_page_list_click"
            android:gravity="center"
            android:text="@string/pop_download_runner_list"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/uploadZipFileTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="0dp"
            android:background="@drawable/selector_page_list_click"
            android:gravity="center"
            android:text="@string/pop_upload_zip_file"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/uploadEpcListTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="0dp"
            android:background="@drawable/selector_page_list_click"
            android:gravity="center"
            android:text="@string/pop_upload_epc_list"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/checkEpcTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="0dp"
            android:background="@drawable/selector_page_list_click"
            android:gravity="center"
            android:text="@string/pop_chip_detection"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/settingPageTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="0dp"
            android:background="@drawable/selector_page_list_click"
            android:gravity="center"
            android:text="@string/pop_setting"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quitSystemTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:height="0dp"
            android:gravity="center"
            android:text="@string/pop_exit_app"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

</RelativeLayout>