<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/readerPowerValueTittleTv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primary"
        android:gravity="center"
        android:text="@string/setting_power_setting"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/readerPowerValueBackIv"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        android:background="@drawable/selector_pop_window_button"
        android:src="@drawable/arrow_back_24"
        app:layout_constraintBottom_toTopOf="@+id/guideline35"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readerPowerValueTittleTv">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/rectangle_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_normal_set"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:padding="5dp"
                android:text="@string/normal_set"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray1"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvMode"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spinnerMode"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/arrayMode"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/BtSetFre"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_bg"
                        android:text="@string/btSetFre"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/BtGetFre"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_bg"
                        android:text="@string/btGetFre"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="3dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uhf_title_power"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spPower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:entries="@array/arrayPower"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uhf_title_dbm" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/btnSetPower"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_bg"
                        android:text="@string/uhf_btn_setpower"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btnGetPower"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_bg"
                        android:text="@string/uhf_btn_getpower"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_freHop"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray1"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/freHopType"
                        android:textSize="16sp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_china"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/China"
                            android:textColor="@drawable/check_text_color"
                            android:textSize="15sp"
                            android:visibility="gone" />

                        <RadioButton
                            android:id="@+id/rb_Europe"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/Europe"
                            android:textColor="@drawable/check_text_color"
                            android:textSize="15sp"
                            android:visibility="gone" />

                        <RadioButton
                            android:id="@+id/rb_America"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:checked="true"
                            android:onClick="onClick_rbAmerica"
                            android:text="@string/America"
                            android:textColor="@drawable/check_text_color"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/rb_Others"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:onClick="onClick_rbOthers"
                            android:text="@string/Others"
                            android:textColor="@drawable/check_text_color"
                            android:textSize="15sp" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvFreHop"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spFreHop"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/arrayFreHop_us"
                        android:gravity="center_horizontal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <Button
                        android:id="@+id/btnSetFreHop"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_bg"
                        android:text="@string/btSetFreHop"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="464dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="160dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="51dp" />


</androidx.constraintlayout.widget.ConstraintLayout>