<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout10"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/clickGunBt"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/main_click_gun" />

        <Button
            android:id="@+id/readCardBt"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/main_start_read_card" />

        <Button
            android:id="@+id/clearBt"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/main_clear_gun" />
        <Button
            android:id="@+id/postall"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="Post All" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/readerResultItemListRv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/linearLayout10"
        android:background="@color/primary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />
</androidx.constraintlayout.widget.ConstraintLayout>